--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "popper.js": "^1.16.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "ajv": "^6.10.2",
     "autoprefixer": "^7.1.2",
     "axios": "^0.19.0",
     "babel-core": "^6.22.1",
@@ -33,6 +35,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "bootstrap": "^4.3.1",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
@@ -53,6 +56,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "jquery": "^3.4.1",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
