--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "element-ui": "^2.12.0",
     "popper.js": "^1.16.0",
     "vue": "^2.5.2",
