--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "element-ui": "^2.12.0",
     "popper.js": "^1.16.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "ajv": "^6.10.2",
