--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "element-ui": "^2.12.0",
+    "mint-ui": "^2.2.13",
     "popper.js": "^1.16.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
