--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mint-ui": "^2.2.13",
     "popper.js": "^1.16.0",
     "vue": "^2.5.2",
+    "vue-echarts": "^4.1.0",
+    "vue-light-timeline": "^1.0.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
