--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "vue-echarts": "^4.1.0",
     "vue-light-timeline": "^1.0.3",
     "vue-router": "^3.0.1",
+    "vue-scroll-lock": "0.0.6",
+    "vuescroll": "^4.14.4",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
