--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vant/touch-emulator": "^1.2.0",
     "cors": "^2.8.5",
     "echarts": "^4.6.0",
+    "es6-promise": "^4.2.8",
     "popper.js": "^1.16.0",
     "v-charts": "^1.19.0",
     "vant": "^2.4.1",
